--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ NODE_ENV=development
 
 TS_NODE_PROJECT=./tsconfig.json
 TS_CONFIG_PATHS=true
+
+SPOTIFY_API=https://api.spotify.com/v1
+SPOTIFY_TOKEN=
