--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "vant": "^2.10.12",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.3.16",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -27,6 +29,10 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.29.0",
+    "sass-loader": "^10.0.5",
+    "vue-cli-plugin-vuetify": "^2.0.7",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.6.0"
   }
 }
