--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "ics": "^2.23.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.5.7",
     "morgan": "^1.10.0",
